--- a/TrafficLight/Base.lproj/Main.storyboard
+++ b/TrafficLight/Base.lproj/Main.storyboard
@@ -1,24 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait" appearance="dark"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mL8-xv-2MI">
+                                <rect key="frame" x="110" y="54" width="100" height="101.5"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oSI-Ho-Rfl">
+                                <rect key="frame" x="110" y="323.5" width="100" height="101.5"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ha-El-gHy">
+                                <rect key="frame" x="110" y="188.5" width="100" height="102"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RT6-nj-ryw">
+                                <rect key="frame" x="110" y="480" width="100" height="30"/>
+                                <color key="backgroundColor" name="AccentColor"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="oSI-Ho-Rfl" firstAttribute="leading" secondItem="RT6-nj-ryw" secondAttribute="leading" id="0L1-La-uR9"/>
+                            <constraint firstItem="oSI-Ho-Rfl" firstAttribute="width" secondItem="mL8-xv-2MI" secondAttribute="width" id="19T-Fw-bXv"/>
+                            <constraint firstItem="oSI-Ho-Rfl" firstAttribute="trailing" secondItem="RT6-nj-ryw" secondAttribute="trailing" id="2Sm-8R-3Q4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="RT6-nj-ryw" secondAttribute="bottom" constant="58" id="3A2-CK-ER5"/>
+                            <constraint firstItem="mL8-xv-2MI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="54" id="F4y-fr-ahK"/>
+                            <constraint firstItem="3ha-El-gHy" firstAttribute="width" secondItem="mL8-xv-2MI" secondAttribute="width" id="FBK-Zm-RZO"/>
+                            <constraint firstItem="3ha-El-gHy" firstAttribute="height" secondItem="mL8-xv-2MI" secondAttribute="height" id="LYi-KM-WG2"/>
+                            <constraint firstItem="3ha-El-gHy" firstAttribute="top" secondItem="mL8-xv-2MI" secondAttribute="bottom" constant="33" id="LhM-xg-4SW"/>
+                            <constraint firstItem="3ha-El-gHy" firstAttribute="leading" secondItem="oSI-Ho-Rfl" secondAttribute="leading" id="Veu-lp-iaX"/>
+                            <constraint firstItem="oSI-Ho-Rfl" firstAttribute="top" secondItem="3ha-El-gHy" secondAttribute="bottom" constant="33" id="beq-J6-IbF"/>
+                            <constraint firstItem="RT6-nj-ryw" firstAttribute="top" secondItem="oSI-Ho-Rfl" secondAttribute="bottom" constant="55" id="ewy-5H-pj0"/>
+                            <constraint firstItem="mL8-xv-2MI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hRU-Q9-qum"/>
+                            <constraint firstItem="mL8-xv-2MI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="110" id="plr-zX-XPj"/>
+                            <constraint firstItem="oSI-Ho-Rfl" firstAttribute="height" secondItem="mL8-xv-2MI" secondAttribute="height" id="sWV-Eq-3Nl"/>
+                            <constraint firstItem="mL8-xv-2MI" firstAttribute="leading" secondItem="3ha-El-gHy" secondAttribute="leading" id="z6K-bd-MOz"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="20.625" y="3.1690140845070425"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
